--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -2,9 +2,10 @@
   <div class="container">
     <h2>Experience</h2>
     <div class="experience">
+      <!-- Mailebo -->
       <div class="experience-card" appFade="up">
         <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Founder at Mailebo</h3>
+          <h3 class="experience-card-info-title">Founder</h3>
           <span class="experience-card-info-date">Mailebo | Remote</span>
           <span class="experience-card-info-date">Aug 2022 - Present</span>
           <div>
@@ -25,38 +26,197 @@
           <p><strong>Technologies:</strong> Python, PyQt, Terraform, Azure Functions, Azure Web Apps, Azure Storage, SQL Server, Azure VMs, Github Actions, Docker.</p>
         </div>
       </div>
+      <!-- Client: Parfums de Marly -->
       <div class="experience-card" appFade="up" [delay]="200">
         <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Front-End Developer</h3>
-          <span class="experience-card-info-date">GitHub | Office</span>
-          <span class="experience-card-info-date">Jan 2020 - Nov 2022</span>
-          <div>
-            <span class="experience-card-info-badge">Part Time</span>
-          </div>
-        </div>
-        <div class="experience-card-details">
-          <h3 class="experience-card-details-title">GitHub Inc</h3>
-          <p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor.</p>
-        </div>
-      </div>
-      <div class="experience-card" appFade="up" [delay]="400">
-        <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Web Developer</h3>
-          <span class="experience-card-info-date">Airbnb | Remote</span>
-          <span class="experience-card-info-date">Apr 2017 - Jan 2020</span>
+          <h3 class="experience-card-info-title">Data Enginner</h3>
+          <span class="experience-card-info-date">Singulier | Remote</span>
+          <span class="experience-card-info-date">May 15, 2023 - Present</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
         </div>
         <div class="experience-card-details">
-          <h3 class="experience-card-details-title">Airbnb Inc</h3>
-          <p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor.</p>
+          <h3 class="experience-card-details-title">Parfums de Marly</h3>
+          <p>Contributed to the development of a Customer Data Platform (CDP) and customer segmentation tool, enabling targeted marketing campaigns. Key responsibilities and tasks included:</p>
+          <ul>
+            <li>Building a data model for the Customer Data Platform.</li>
+            <li>Creating pipelines to collect and transform data from various sources into the CDP.</li>
+            <li>Defining rules for unique customer identification across multiple channels.</li>
+            <li>Developing a customer segmentation tool.</li>
+            <li>Implementing a pipeline to load segments into Klavyo (CRM tool) for targeted marketing.</li>
+          </ul>
+          <p>Technologies: BigQuery, SQL, AirByte, Python, DBT, Kedro, Pandera, Temporal, Docker, Kubernetes, ArgoCD, GitLab CI/CD.</p>
         </div>
       </div>
+
+      <!-- Respire - Data Platform Development -->
+      <div class="experience-card" appFade="up" [delay]="400">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Data Engineer</h3>
+          <span class="experience-card-info-date">Singulier | Remote</span>
+          <span class="experience-card-info-date">Feb 13, 2023 - Apr 21, 2023</span>
+          <div>
+            <span class="experience-card-info-badge">Full Time</span>
+          </div>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">Respire</h3>
+          <p>Respire, a natural care products company, lacked a Data Platform for efficient performance tracking. Responsibilities and achievements included:</p>
+          <ul>
+            <li>Constructed the data model for the Data Platform.</li>
+            <li>Developed a Singer.io connector to extract data from Odoo into BigQuery.</li>
+            <li>Aggregated B2B and B2C data in BigQuery and formulated key performance indicators (KPIs).</li>
+            <li>Established connections with Looker for data visualization and created dashboards tracking sales activities.</li>
+          </ul>
+          <p>Technologies: BigQuery, SQL, DataFactory, Python, Singer io, Kedro, Pandera, Temporal, Docker, Kubernetes, ArgoCD, GitLab CI/CD.</p>
+        </div>
+      </div>
+
+      <!-- Mon Marché - Data Platform Development -->
+
+      <div class="experience-card" appFade="up" [delay]="600">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Data Engineer</h3>
+          <span class="experience-card-info-date">Singulier | Remote</span>
+          <span class="experience-card-info-badge">Full Time</span>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">Mon Marché</h3>
+          <p>Worked briefly with Mon Marché to integrate Braze data into their DataLake in an optimized way. Key project details included:</p>
+          <ul>
+            <li>Creation of a cloud function to integrate data from Braze into the DataLake by parallelizing API calls.</li>
+            <li>Reduced execution time from hours to 10 minutes using parallelization.</li>
+            <li>Creation of DBT pipelines for data transformations.</li>
+          </ul>
+          <p>Technologies used: GCP, BigQuery, SQL, Python, Cloud Functions, DBT, Github Actions.</p>
+        </div>
+      </div>
+      
+      <!-- Alain Afflelou Experience Details -->
+      <div class="experience-card" appFade="up" [delay]="800">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Data Engineer</h3>
+          <span class="experience-card-info-date">Singulier | Remote</span>
+          <span class="experience-card-info-date">20/12/2021 - 23/12/2022</span>
+          <div>
+            <span class="experience-card-info-badge">Full Time</span>
+          </div>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">Alain Afflelou</h3>
+          <p>Afflelou is an optical chain that wanted to modernize its Data platform. As a Data Engineer, key responsibilities and achievements included:</p>
+          <ul>
+            <li>Setting up pipelines to create datamarts for various teams and tools.</li>
+            <li>Integration of GDPR rules.</li>
+            <li>Standardization of customer consents across various sources.</li>
+            <li>Creation of data validation pipelines.</li>
+          </ul>
+          <p>Technologies: Azure Data Factory, Azure Databricks, Python, PySpark, SQL, Azure DevOps.</p>
+        </div>
+      </div>
+
+      <!-- MyMobility Experience -->
+      <div class="experience-card" appFade="up" [delay]="1000">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Data Engineer</h3>
+          <span class="experience-card-info-date">Singulier | Remote</span>
+          <span class="experience-card-info-date">01/09/2021 - 17/12/2021</span>
+          <div>
+            <span class="experience-card-info-badge">Full Time</span>
+          </div>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">MyMobility</h3>
+          <p>MyMobility provided daily transportation services to individuals with disabilities or in fragile situations. Key projects and responsibilities included:</p>
+          <ul>
+            <li>Building the Odoo data model.</li>
+            <li>Developing a REST API mirroring the SOAP API of Gescar for enhanced flexibility and performance.</li>
+            <li>Creating connectors for real-time data synchronization between Gescar (old ERP) and Odoo (new ERP).</li>
+            <li>Integrating a vehicle tour optimization algorithm into Odoo.</li>
+          </ul>
+          <p>Technologies: Python, Flask, Odoo, Docker, Azure DevOps, Azure Functions.</p>
+        </div>
+      </div>
+
+      <!-- LYXOR Asset Management Experience Details -->
+      <div class="experience-card" appFade="up" [delay]="1200">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Data Engineer/Analyst</h3>
+          <span class="experience-card-info-date">LYXOR Asset Management | Full Time</span>
+          <span class="experience-card-info-date">Nov 1, 2019 - June 1, 2021</span>
+          <div>
+            <span class="experience-card-info-badge">Full Time</span>
+          </div>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">LYXOR Asset Management</h3>
+          <p>As a Data Engineer/Analyst at LYXOR Asset Management, responsibilities included:</p>
+          <ul>
+            <li>Creating and supporting solutions for large volumes of data.</li>
+            <li>Building and monitoring ESG indicators of Lyxor ETFs such as the carbon footprint.</li>
+            <li>Ensuring the analysis, collection, storage, and smooth processing of data.</li>
+          </ul>
+          <p>Technologies: Python, SQL Server, VBA, Azure.</p>
+        </div>
+      </div>
+      <!-- Enedis - Data Scientist -->
+      <div class="experience-card" appFade="up" [delay]="1400">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Data Scientist Apprentice</h3>
+          <span class="experience-card-info-date">Enedis | Location</span>
+          <span class="experience-card-info-date">Sep 2018 - Sep 2019</span>
+          <div>
+            <span class="experience-card-info-badge">Apprenticeship</span>
+          </div>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">Enedis</h3>
+          <p>Contributed as a Data Scientist Apprentice at Enedis, specializing in:</p>
+          <ul>
+            <li>Developing predictive models to analyze causes of absenteeism at training sessions.</li>
+            <li>Building a detailed monitoring dashboard for absenteeism.</li>
+          </ul>
+          <p>Technologies used: PHP, MySQL, HTML, CSS, Python, Scikt-Learn, Pandas.</p>
+        </div>
+      </div>
+
+
+      <!-- CEA - Python Developer -->
+      <div class="experience-card" appFade="up" [delay]="1600">
+        <div class="experience-card-info">
+          <h3 class="experience-card-info-title">Python Developer Intern</h3>
+          <span class="experience-card-info-date">CEA | Location</span>
+          <span class="experience-card-info-date">May 2018 - Aug 2018</span>
+          <div>
+            <span class="experience-card-info-badge">Internship</span>
+          </div>
+        </div>
+        <div class="experience-card-details">
+          <h3 class="experience-card-details-title">CEA</h3>
+          <p>Contributed as a Python Developer Intern, involved in the following project:</p>
+          <ul>
+            <li>Designed and implemented a figure modeling software for Monte-Carlo simulation in gamma spectrometry using Python and PyQT.</li>
+            <li>Published an article at the International Conference on Radionuclide Metrology (ICRM) related to the project.</li>
+          </ul>
+          <p>Technologies utilized: Python, PyQT.</p>
+          <p>Poster: <a href="http://www.lnhb.fr/pdf/Conferences/LNHB-ICRM2019-P110.pdf">CEA ICRM Poster</a></p>
+        </div>
+      </div>
+
+      
+
+      
+
+
+
+
+
+
+
+
+
+
     </div>
     <hr>
     <h2>Education & Skills</h2>
