--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -79,7 +79,9 @@
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Data Engineer</h3>
           <span class="experience-card-info-date">Singulier | Remote</span>
-          <span class="experience-card-info-badge">Full Time</span>
+          <div>
+            <span class="experience-card-info-badge">Full Time</span>
+          </div>
         </div>
         <div class="experience-card-details">
           <h3 class="experience-card-details-title">Mon Marché</h3>
