--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="experience-card-details">
           <h3 class="experience-card-details-title">Mailebo</h3>
-          <p>I created [https://mailebo.com](https://mailebo.com/) a company that aims to simplify the management of corporate email boxes.</p>
+          <p>I created <a href="https://mailebo.com/" target="_blank" rel="noopener noreferrer">Visit Mailebo</a> a company that aims to simplify the management of corporate email boxes.</p>
           <h4>Project:</h4>
           <ul>
             <li>Create a mailbox that allows automatic mail management.</li>
@@ -202,7 +202,7 @@
             <li>Published an article at the International Conference on Radionuclide Metrology (ICRM) related to the project.</li>
           </ul>
           <p>Technologies utilized: Python, PyQT.</p>
-          <p>Poster: <a href="http://www.lnhb.fr/pdf/Conferences/LNHB-ICRM2019-P110.pdf">CEA ICRM Poster</a></p>
+          <p>Poster: <a href="http://www.lnhb.fr/pdf/Conferences/LNHB-ICRM2019-P110.pdf" target="_blank">CEA ICRM Poster</a></p>
         </div>
       </div>
 
