--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="experience-card-details">
           <h3 class="experience-card-details-title">Mailebo</h3>
-          <p>I created <a href="https://mailebo.com/" target="_blank" rel="noopener noreferrer">Visit Mailebo</a> a company that aims to simplify the management of corporate email boxes.</p>
+          <p>I created <a href="https://mailebo.com/" target="_blank" rel="noopener noreferrer"> Mailebo</a> a company that aims to simplify the management of corporate email boxes.</p>
           <h4>Project:</h4>
           <ul>
             <li>Create a mailbox that allows automatic mail management.</li>
