--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -223,33 +223,37 @@
     <hr>
     <h2>Education & Skills</h2>
     <div class="education-skill">
-      <!-- Education Section -->
+        <!-- Education Section -->
       <div class="education" appFade="up">
         <!-- École Centrale de Lyon -->
         <div class="education-card">
           <span class="education-date">2017 - 2019</span>
-          <h3 class="education-title">Diplôme d'ingénieur, Informatique</h3>
+          <h3 class="education-title">Engineering Degree, Computer Science</h3>
           <span class="education-institute">École Centrale de Lyon</span>
         </div>
         <!-- L'École Normale Supérieure de Lyon -->
         <div class="education-card">
           <span class="education-date">2018 - 2018</span>
-          <h3 class="education-title">Module, Machine Learning</h3>
+          <h3 class="education-title">Module in Machine Learning</h3>
           <span class="education-institute">L'École Normale Supérieure de Lyon</span>
         </div>
         <!-- Ecole Centrale Casablanca -->
         <div class="education-card">
           <span class="education-date">2015 - 2017</span>
-          <h3 class="education-title">Diplôme d'ingénieur</h3>
+          <h3 class="education-title">Engineering Degree</h3>
           <span class="education-institute">Ecole Centrale Casablanca</span>
         </div>
         <!-- Prépa Moulay Abdellah -->
         <div class="education-card">
           <span class="education-date">2013 - 2015</span>
-          <h3 class="education-title">Prépa MP Mathématiques</h3>
+          <h3 class="education-title">Preparatory Classes in Mathematics</h3>
           <span class="education-institute">Prépa Moulay Abdellah</span>
         </div>
       </div>
+
+
+
+
       <!-- Skills Section -->
       <div class="skill" appFade="up" [delay]="200">
         <!-- Python -->
