--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -255,108 +255,85 @@
 
 
       <!-- Skills Section -->
-      <div class="skill" appFade="up" [delay]="200">
-        <!-- Python -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Advanced</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Python</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-95"></div>
-            </div>
-          </div>
-        </div>
-        <!-- SQL -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Advanced</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">SQL</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-90"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Machine Learning -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Machine Learning</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-70"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Data Engineering -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Data Engineering</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-75"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Data Analysis -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Data Analysis</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-70"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Docker -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Docker</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-75"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Kubernetes -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Kubernetes</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-70"></div>
-            </div>
-          </div>
-        </div>
-        <!-- Azure -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">Azure</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-75"></div>
-            </div>
-          </div>
-        </div>
-        <!-- GitLab CI/CD -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">GitLab CI/CD</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-70"></div>
-            </div>
-          </div>
-        </div>
-        <!-- HTML/CSS -->
-        <div class="skill-card">
-          <!-- <h3 class="skill-count">Intermediate</h3> -->
-          <div class="skill-info">
-            <h4 class="skill-title">HTML/CSS</h4>
-            <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-70"></div>
-            </div>
-          </div>
-        </div>
+<div class="skill" appFade="up" [delay]="200">
+  <!-- Column 1 -->
+  <div class="column">
+    <!-- Python -->
+    <div class="skill-card">
+      <h3 class="skill-count">Advanced</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Python</h4>
       </div>
+    </div>
+    <!-- SQL -->
+    <div class="skill-card">
+      <h3 class="skill-count">Advanced</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">SQL</h4>
+      </div>
+    </div>
+    <!-- Machine Learning -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Machine Learning</h4>
+      </div>
+    </div>
+    <!-- Data Engineering -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Data Engineering</h4>
+      </div>
+    </div>
+    <!-- Data Analysis -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Data Analysis</h4>
+      </div>
+    </div>
+  </div>
+  <!-- Column 2 -->
+  <div class="column">
+    <!-- Docker -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Docker</h4>
+      </div>
+    </div>
+    <!-- Kubernetes -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Kubernetes</h4>
+      </div>
+    </div>
+    <!-- Azure -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">Azure</h4>
+      </div>
+    </div>
+    <!-- GitLab CI/CD -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">GitLab CI/CD</h4>
+      </div>
+    </div>
+    <!-- HTML/CSS -->
+    <div class="skill-card">
+      <h3 class="skill-count">Intermediate</h3>
+      <div class="skill-info">
+        <h4 class="skill-title">HTML/CSS</h4>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 
