--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -255,64 +255,40 @@
 
 
       <!-- Skills Section -->
-<div class="skill" appFade="up" [delay]="200">
-  <div class="skill-column">
-    <!-- Column 1 -->
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Python</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">SQL</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Machine Learning</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Data Engineering</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Data Analysis</h4>
-      </div>
-    </div>
+<!-- Skills Section -->
+<div class="skills" appFade="up">
+  <div class="column">
+    <h3 class="column-title">Technical Skills</h3>
+    <ul class="skill-list">
+      <li>Python</li>
+      <li>SQL</li>
+      <li>Machine Learning</li>
+      <li>Data Engineering</li>
+      <li>Data Analysis</li>
+      <li>Docker</li>
+      <li>Kubernetes</li>
+      <li>Azure</li>
+      <li>GitLab CI/CD</li>
+      <li>HTML/CSS</li>
+    </ul>
   </div>
-  <div class="skill-column">
-    <!-- Column 2 -->
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Docker</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Kubernetes</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">Azure</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">GitLab CI/CD</h4>
-      </div>
-    </div>
-    <div class="skill-card">
-      <div class="skill-info">
-        <h4 class="skill-title">HTML/CSS</h4>
-      </div>
-    </div>
+  <div class="column">
+    <h3 class="column-title">Other Skills</h3>
+    <ul class="skill-list">
+      <li>Problem Solving</li>
+      <li>Team Collaboration</li>
+      <li>Project Management</li>
+      <li>Communication</li>
+      <li>Leadership</li>
+      <li>Critical Thinking</li>
+      <li>Time Management</li>
+      <li>Adaptability</li>
+      <li>Creativity</li>
+      <li>Attention to Detail</li>
+    </ul>
   </div>
 </div>
+
 
 
 
