--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -255,21 +255,30 @@
 
 
       <!-- Skills Section -->
-<!-- Skills Section -->
 <div class="skills" appFade="up">
   <div class="column">
     <h3 class="column-title">Technical Skills</h3>
     <ul class="skill-list">
       <li>Python</li>
       <li>SQL</li>
-      <li>Machine Learning</li>
-      <li>Data Engineering</li>
-      <li>Data Analysis</li>
+      <li>BigQuery</li>
+      <li>AirByte</li>
+      <li>DBT (Data Build Tool)</li>
+      <li>Kedro</li>
+      <li>Pandas</li>
+      <li>PySpark</li>
+      <li>Azure Data Factory</li>
+      <li>Azure Databricks</li>
+      <li>Flask</li>
+      <li>Odoo</li>
+      <li>HTML/CSS</li>
+      <li>Python Libraries (e.g., PyQt, Temporal)</li>
+      <li>GitLab CI/CD</li>
+      <li>Github Actions</li>
       <li>Docker</li>
       <li>Kubernetes</li>
       <li>Azure</li>
-      <li>GitLab CI/CD</li>
-      <li>HTML/CSS</li>
+      <li>GCP (Google Cloud Platform)</li>
     </ul>
   </div>
   <div class="column">
