--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -255,9 +255,11 @@
 
 
       <!-- Skills Section -->
+
+      <!-- Skills Section -->
 <div class="skills" appFade="up">
-  <div class="column">
-    <h3 class="column-title">Technical Skills</h3>
+  <div class="technical-skills">
+    <h3 class="skills-title">Technical Skills</h3>
     <ul class="skill-list">
       <li>Python</li>
       <li>SQL</li>
@@ -275,16 +277,12 @@
       <li>Python Libraries (e.g., PyQt, Temporal)</li>
       <li>GitLab CI/CD</li>
       <li>Github Actions</li>
-      <li>Docker</li>
-      <li>Kubernetes</li>
-      <li>Azure</li>
-      <li>GCP (Google Cloud Platform)</li>
+      <!-- Add more technical skills as needed -->
     </ul>
   </div>
-  <div class="column">
-    <h3 class="column-title">Other Skills</h3>
+  <div class="soft-skills">
+    <h3 class="skills-title">Soft Skills</h3>
     <ul class="skill-list">
-      <li>Problem Solving</li>
       <li>Team Collaboration</li>
       <li>Project Management</li>
       <li>Communication</li>
@@ -294,9 +292,12 @@
       <li>Adaptability</li>
       <li>Creativity</li>
       <li>Attention to Detail</li>
+      <li>Problem Solving</li>
+      <!-- Add more soft skills as needed -->
     </ul>
   </div>
 </div>
+
 
 
 
