--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -254,32 +254,36 @@
       <li>AirByte</li>
       <li>DBT (Data Build Tool)</li>
       <li>Kedro</li>
-      <li>Pandas</li>
       <li>PySpark</li>
       <li>Azure Data Factory</li>
       <li>Azure Databricks</li>
       <li>Flask</li>
       <li>Odoo</li>
       <li>HTML/CSS</li>
-      <li>Python Libraries (e.g., PyQt, Temporal)</li>
-      <li>GitLab CI/CD</li>
-      <li>Github Actions</li>
+      <li>Python Libraries (e.g., Pandas, PyQt, Temporal)</li>
+   
       <!-- Add more technical skills as needed -->
     </ul>
   </div>
   <div class="soft-skills">
     <h3 class="skills-title">Soft Skills</h3>
     <ul class="skill-list">
-      <li>Team Collaboration</li>
-      <li>Project Management</li>
-      <li>Communication</li>
-      <li>Leadership</li>
-      <li>Critical Thinking</li>
-      <li>Time Management</li>
-      <li>Adaptability</li>
-      <li>Creativity</li>
-      <li>Attention to Detail</li>
-      <li>Problem Solving</li>
+      <li>GitLab CI/CD</li>
+      <li>Github Actions</li>
+      <li>Docker</li>
+      <li>Kubernetes</li>
+      <li>Azure</li>
+      <li>GCP (Google Cloud Platform)</li>
+      <li>Microsoft Azure DevOps</li>
+      <li>Azure Functions</li>
+      <li>Azure Web Apps</li>
+      <li>Azure Storage</li>
+      <li>SQL Server</li>
+      <li>GCP BigQuery</li>
+      <li>HTML/CSS </li>
+      <li>Javascript</li>
+      <li>RESTful APIs</li>
+  
       <!-- Add more soft skills as needed -->
     </ul>
   </div>
