--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -246,46 +246,50 @@
       <!-- Skills Section -->
 
   <div class="technical-skills">
-    <h3 class="skills-title">Technical Skills</h3>
+    <h3 class="skills-title">Programming Languages and Frameworks</h3>
     <ul class="skill-list">
-      <li>Python</li>
-      <li>SQL</li>
-      <li>BigQuery</li>
-      <li>AirByte</li>
-      <li>DBT (Data Build Tool)</li>
-      <li>Kedro</li>
-      <li>PySpark</li>
-      <li>Azure Data Factory</li>
-      <li>Azure Databricks</li>
-      <li>Flask</li>
-      <li>Odoo</li>
-      <li>HTML/CSS</li>
-      <li>Python Libraries (e.g., Pandas, PyQt, Temporal)</li>
-   
-      <!-- Add more technical skills as needed -->
+        <li>Python</li>
+        <li>HTML/CSS</li>
+        <li>Javascript</li>
+        <li>Flask</li>
+        <li>PySpark</li>
+        <li>Pandas</li>
+        <li>PyQt</li>
+        <li>Temporal</li>   
     </ul>
   </div>
   <div class="soft-skills">
-    <h3 class="skills-title">Soft Skills</h3>
+    <h3 class="skills-title">Database and Data Tools</h3>
     <ul class="skill-list">
+      <li>SQL</li>
+      <li>BigQuery</li>
+      <li>SQL Server</li>
+      <li>AirByte</li>
+      <li>DBT (Data Build Tool)</li>
+      <li>Kedro</li>
+      <li>GCP BigQuery</li>
+      <li>Azure Data Factory</li>
+      <li>Azure Databricks</li>
+    </ul>
+    
+  </div>
+
+  <div class="soft-skills">
+    <h3 class="skills-title">Coud Services and Development Tools</h3>
+    <ul class="skill-list">
+      <li>Azure</li>
+      <li>GCP (Google Cloud Platform)</li>
+      <li>Microsoft Azure DevOps</li>
       <li>GitLab CI/CD</li>
       <li>Github Actions</li>
       <li>Docker</li>
       <li>Kubernetes</li>
-      <li>Azure</li>
-      <li>GCP (Google Cloud Platform)</li>
-      <li>Microsoft Azure DevOps</li>
       <li>Azure Functions</li>
       <li>Azure Web Apps</li>
       <li>Azure Storage</li>
-      <li>SQL Server</li>
-      <li>GCP BigQuery</li>
-      <li>HTML/CSS </li>
-      <li>Javascript</li>
       <li>RESTful APIs</li>
-  
-      <!-- Add more soft skills as needed -->
     </ul>
+    
   </div>
 </div>
 
