--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -246,7 +246,7 @@
       <!-- Skills Section -->
 
   <div class="technical-skills">
-    <h3 class="skills-title">Programming Languages  <br> and Frameworks</h3>
+    <h3 class="skills-title">Programming  <br> Languages  <br> and Frameworks</h3>
     <ul class="skill-list">
         <li>Python</li>
         <li>HTML/CSS</li>
@@ -259,7 +259,7 @@
     </ul>
   </div>
   <div class="soft-skills">
-    <h3 class="skills-title">Database  <br> and Data Tools</h3>
+    <h3 class="skills-title">Database  <br> and  <br> Data Tools</h3>
     <ul class="skill-list">
       <li>SQL</li>
       <li>BigQuery</li>
@@ -275,10 +275,10 @@
   </div>
 
   <div class="soft-skills">
-    <h3 class="skills-title">Coud Services <br> and Development Tools</h3>
+    <h3 class="skills-title">Coud Services <br> and Development  <br> Tools</h3>
     <ul class="skill-list">
       <li>Azure</li>
-      <li>GCP (Google Cloud Platform)</li>
+      <li>Google Cloud Platform</li>
       <li>Microsoft Azure DevOps</li>
       <li>GitLab CI/CD</li>
       <li>Github Actions</li>
