--- a/src/app/layouts/services/services.component.html
+++ b/src/app/layouts/services/services.component.html
@@ -2,30 +2,23 @@
   <div class="container">
     <div class="services-title">
       <h2>What I Do</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, egestas. Id fermentum
-        nullam ipsum massa.</p>
+      <p>I specialize in various areas:</p>
     </div>
     <div class="services">
       <div class="services-card" appFade="left">
-        <h3 class="services-card-subtitle">Web Development</h3>
-        <h3 class="services-card-title">Web Design & Logo</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua.
-        </p>
+        <h3 class="services-card-subtitle">Data Engineering</h3>
+        <h3 class="services-card-title">Database Management & Data Tools</h3>
+        <p>I handle database management, utilize data tools like SQL, BigQuery, SQL Server, AirByte, DBT, Kedro, GCP BigQuery, Azure Data Factory, and Azure Databricks for effective data solutions.</p>
       </div>
       <div class="services-card" appFade="left" [delay]="200">
-        <h3 class="services-card-subtitle">App Development</h3>
-        <h3 class="services-card-title">iOS & Android</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua.
-        </p>
+        <h3 class="services-card-subtitle">Cloud Solutions</h3>
+        <h3 class="services-card-title">Cloud Services & DevOps</h3>
+        <p>I work with Azure, GCP, Microsoft Azure DevOps, GitLab CI/CD, Github Actions, Docker, Kubernetes, Azure Functions, Azure Web Apps, Azure Storage, and RESTful APIs for cloud-based development and operations.</p>
       </div>
       <div class="services-card" appFade="left" [delay]="400">
-        <h4 class="services-card-subtitle">Marketing</h4>
-        <h3 class="services-card-title">Digital Marketing</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua.
-        </p>
+        <h4 class="services-card-subtitle">Software Development</h4>
+        <h3 class="services-card-title">Application Development & Integration</h3>
+        <p>I develop robust applications for various platforms including iOS & Android, and integrate systems utilizing Python, Flask, PySpark, Pandas, PyQt, and Temporal.</p>
       </div>
     </div>
   </div>
