--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
 <app-about id="about"></app-about>
 <app-services id="services"></app-services>
 <app-resume id="resume"></app-resume>
-<app-portfolio id="portfolio"></app-portfolio>
-<app-testimonials></app-testimonials>
+<!-- <app-portfolio id="portfolio"></app-portfolio> -->
+<!-- <app-testimonials></app-testimonials> -->
 <app-contacts id="contacts"></app-contacts>
 <app-footer></app-footer>
 <app-scroll-top></app-scroll-top>
