--- a/src/app/layouts/landing/landing.component.html
+++ b/src/app/layouts/landing/landing.component.html
@@ -7,7 +7,7 @@
         <p class="description">I design and develop services for customers of all sizes,
           specializing in creating Data products.</p>
         <ul class="social-icons-container">
-          <li>
+          <!-- <li>
             <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
@@ -16,9 +16,9 @@
                 </svg>
               </span>
             </a>
-          </li>
+          </li> -->
           <li>
-            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+            <a href="https://linkedin.com/abdellah-wadjinny" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
                   <path
@@ -28,7 +28,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/awadjinn" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 496 512">
                   <path
